--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
             <dependency>
                 <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>[6.0.18,)</version>
+                <version>[6.0.18]</version>
             </dependency>
 
             <!-- MySQL 连接驱动依赖 -->
