--- a/srent-db/src/main/resources/application-db.yml
+++ b/srent-db/src/main/resources/application-db.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     druid:
       url:  jdbc:mysql://localhost:3306/srent?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false
-      driver-class-name:  com.mysql.jdbc.Driver
+      driver-class-name:  com.mysql.cj.jdbc.Driver
       username:  root
 #      线上root密码
 #      password:  12345678
